--- a/Contact.html
+++ b/Contact.html
@@ -22,33 +22,35 @@
     <link rel="stylesheet" href="./css/master.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navbar">
+<body data-bs-spy="scroll" data-bs-target="#navbar" class="">
 
-    <div class="loading-screen position-fixed top-0 start-0 end-0 bottom-0 bg-black justify-content-center align-items-center" style="display: none;">
+    <div class="loading-screen position-fixed top-0 start-0 end-0 bottom-0 bg-black text-warning justify-content-center align-items-center" style="display: none;">
         <i class="fa fa-spinner fa-spin fa-5x"></i>
     </div>
 
     <!-- ^ ______> navbar section  -->
     <nav>
-        <div class="sidebar d-flex position-fixed h-100 top-0">
-            <nav class="sidebar-data d-flex justify-content-between  flex-column bg-black text-light p-4" style="width: 250px;">
+        <div class="sidebar d-flex position-fixed h-100 top-0 bg-white">
+            <nav class="sidebar-data d-flex justify-content-between flex-column p-4 text-warning" style="width: 250px;">
                 <ul class="list-unstyled">
-                    <li><a href="./Search.html" class="text-light d-block mb-2">Search</a></li>
-                    <li><a href="./index.html" class="text-light d-block mb-2">Categories</a></li>
-                    <li><a href="./Area.html" class="text-light d-block mb-2">Area</a></li>
-                    <li><a href="./Ingredients.html" class="text-light d-block mb-2">Ingredients</a></li>
-                    <li><a href="./Contact.html" class="text-light d-block mb-2 active">Contact Us</a></li>
+                    <h1 class="text-center h3">Yammy <span class="ms-3"><img src="./img/YummyEmojii.png" width="50px" height="50x" alt=""></span></h1>
+                    <li><a href="./Search.html" class="text-warning d-block mb-2">Search</a></li>
+                    <li><a href="./index.html" class="text-warning d-block mb-2">Categories</a></li>
+                    <li><a href="./Area.html" class="text-warning d-block mb-2">Area</a></li>
+                    <li><a href="./Ingredients.html" class="text-warning d-block mb-2">Ingredients</a></li>
+                    <li><a href="./Contact.html" class="text-warning d-block mb-2 active">Contact Us</a></li>
                 </ul>
                 <div class="mt-auto">
-                    <a href="#" class="text-light me-3"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="text-light me-3"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-light"><i class="fas fa-globe"></i></a>
+                    <a href="#" class="text-warning me-3"><i class="fab fa-facebook"></i></a>
+                    <a href="#" class="text-warning me-3"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="text-warning"><i class="fas fa-globe"></i></a>
                     <p class="mt-3">&copy; Copyright Â© 2019 All Rights Reserved.</p>
                 </div>
             </nav>
-            <nav class="sidebar-icone d-flex justify-content-between align-items-center flex-column bg-white p-3" style="width: 70px;">
-                <div class="icon1">
+            <nav class="sidebar-icone d-flex justify-content-between align-items-center flex-column bg-white p-3 border border-4 border-warning" style="width: 70px;">
+                <div class="icon1 d-flex justify-content-center align-items-center g-2 flex-column">
                     <img src="./img/YummyEmojii.png" class="d-block mx-auto" alt="" width="100%">
+                    <i class="dark-mode fa-solid fa-moon fa-2x fa-align-justify cursor"></i>
                 </div>
                 <div class="cursor">
                     <i id="icon2" class="fa-solid fa-bars fa-2x fa-align-justify"></i>
@@ -83,7 +85,7 @@
                         <p class="text-danger fw-bold mt-2 d-none"># The value does not match the password</p>
                     </div>
                 </div>
-                <button type="submit" id="send" class="py-2 px-4 rounded-2 btn btn-outline-danger d-block mx-auto my-4 fw-bold border border-2 border-danger ">submit</button>
+                <button type="submit" id="send" class="py-2 px-4 rounded-2 btn btn-outline-warning d-block mx-auto my-4 fw-bold border border-2 border-warning ">submit</button>
             </form>
         </div>
     </main>
